--- a/scala3doc/resources/dotty_res/styles/scalastyle.css
+++ b/scala3doc/resources/dotty_res/styles/scalastyle.css
@@ -613,6 +613,35 @@ footer .pull-right {
   position: relative;
 }
 
+#lhs-socials {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+#footer-socials {
+  margin-left: 10px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.social-icon {
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+.social-icon img {
+  height: 20px;
+  width: 20px;
+}
+
+#generated-by {
+  position: absolute;
+  right: 10px;
+  display: flex;
+  align-items: center;
+}
+
 /* Large Screens */
 @media(min-width: 1100px) {
   :root {
